fix: prevent overflow and unwanted scrollbars in BoardComponent layout

--- a/src/app/main-pages/board/board.component.scss
+++ b/src/app/main-pages/board/board.component.scss
@@ -4,7 +4,7 @@
 
 .board-container {
   padding: 20px;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 100px);
   overflow: hidden;
 }
 
@@ -15,7 +15,7 @@ h1 {
 
 .board-columns {
   @include dFlex($jc: flex-start, $ai: stretch, $g: 20px);
-  height: 100%;
+  // height: 100%;
   overflow-x: auto;
   padding-bottom: 20px;
 }
@@ -27,7 +27,6 @@ h1 {
   padding: 15px;
   @include dFlex($fd: column);
   height: fit-content;
-  max-height: 100%;
 }
 
 .column-header {
@@ -61,11 +60,19 @@ h1 {
 }
 
 .column-content {
+  // max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 250px);
+
+  min-height: 200px;
+  min-width: 252px;
   @include dFlex($fd: column, $g: 10px, $jc: flex-start);
   flex: 1;
   overflow-y: auto;
-  max-height: calc(100vh - 200px);
-  min-height: 200px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .empty-column {
@@ -472,4 +479,19 @@ h1 {
 .cdk-drag-animating {
   // transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.cdk-drop-list-receiving {
+  border: 2px dotted $grey;
+  border-radius: 24px;
+}
 // #endregion
+
+@media (max-width: 1200px) {
+  .board-container {
+    height: calc(100vh - 176px);
+  }
+
+  .board-columns {
+
+  }
+}
